ingressSample/apple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-deployment
  labels:
    app: apple
spec:
  replicas: 1
  template:
    metadata:
      name: apple
      labels:
        app: apple
    spec:
      containers:
      - name: apple
        image: hashicorp/http-echo
        args:
          - "-text=appless"
        imagePullPolicy: IfNotPresent
        
      restartPolicy: Always
  selector:
    matchLabels:
      app: apple


---

apiVersion: v1
kind: Service
metadata:
  name: apple
spec:
  selector:
    app: apple
  ports:
  - protocol: TCP
    port: 5678
