ingressSample/banana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-deployment
  labels:
    app: banana
spec:
  replicas: 1
  template:
    metadata:
      name: banana
      labels:
        app: banana
    spec:
      containers:
      - name: banana
        image: hashicorp/http-echo
        args:
          - "-text=bananass"
        imagePullPolicy: IfNotPresent
        
      restartPolicy: Always
  selector:
    matchLabels:
      app: banana


---

apiVersion: v1
kind: Service
metadata:
  name: banana
spec:
  selector:
    app: banana
  ports:
  - protocol: TCP
    port: 5678
